--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#1a4f79",
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": ".",
+  "start_url": "https://ezio17.github.io/service-workets/",
   "icons": [
     {
       "src": "/icons/app-icon-96-96.png",
