--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "VM PWA",
   "theme_color": "#3a1a86",
   "background_color": "#1a4f79",
-  "display": "standalone",
+  "display": "browser",
   "orientation": "portrait",
   "start_url": "https://ezio17.github.io/service-workets/",
   "icons": [
